examples/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: vulcand-ingress
  annotations:
    ingress.kubernetes.io/pass-host-header: "true"
    ingress.kubernetes.io/trust-forward-header: "true"
    ingress.kubernetes.io/read-timeout: "5s"
    ingress.kubernetes.io/dial-timeout: "5s"
    ingress.kubernetes.io/tls-handshake-timeout: "10s"
    ingress.kubernetes.io/keepalive: "30s"
    ingress.kubernetes.io/max-idle-connections-per-host: "12"
    ingress.kubernetes.io/middleware.ratelimit: |
      {
        "PeriodSeconds": 1,
        "Burst": 3,
        "Variable": "client.ip",
        "Requests": 1
      }
    ingress.kubernetes.io/middleware.connlimit: |
      {
        "Connections": 3,
        "Variable": "client.ip"
      }
spec:
  backend:
    serviceName: default
    servicePort: 80
  rules:
  - host: example.com
    http:
      paths:
      - path: /foo
        backend:
          serviceName: foo
          servicePort: 80
  - host: bar.example.com
    http:
      paths:
      - path: /bar
        backend:
          serviceName: bar
          servicePort: 80
  - http:
      paths:
      - path: /baz.*
        backend:
          serviceName: baz
          servicePort: 80
